--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <link rel="stylesheet" href="./vendor/slick/slick-theme.css">
    <link rel="stylesheet" href="css/style.css">
    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-   <title>Mamad Gaming Store</title>
+   <title>Codashop - Indonesia</title>
 </head>
 
 <body>
@@ -46,7 +46,26 @@
       </div>
    </header>
 
- <br>
+   <!-- Banner -->
+   <section class="banner">
+      <div class="banner__container">
+         <div class="banner__slide">
+            <img src="./img/banner/mlbb_50dpromo_id.jpg" class="banner__img" alt="">
+         </div>
+         <div class="banner__slide">
+            <img src="./img/banner/pubg_promo_id.jpg" class="banner__img" alt="">
+         </div>
+         <div class="banner__slide">
+            <img src="./img/banner/msw_promo_id.jpg" class="banner__img" alt="">
+         </div>
+         <div class="banner__slide">
+            <img src="./img/banner/la_promo_id.jpg" class="banner__img" alt="">
+         </div>
+         <div class="banner__slide">
+            <img src="./img/banner/hago_promo_id.jpg" class="banner__img" alt="">
+         </div>
+      </div>
+   </section>
 
    <!-- Category 1 Category Popular -->
    <section class="category category--1">
