--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="header__container">
          <div class="header__nav">
             <div class="logo">
-               <img src="./img/codashop-logo.png" class="logo__img" alt="logo">
+               <img src="./img/th.jpg" class="logo__img" alt="logo" style="float:left">
                <p class="logo__slogan">
                   Cara tercepat dan termudah untuk pembelian kredit permainan.
                </p>
