--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="header__container">
          <div class="header__nav">
             <div class="logo">
-               <img src="./img/th.jpg" class="logo__img" alt="logo" style="float:left" width="100px" height="100px">
+               <img src="./img/c4f0bad27d8645dbaa7d0b25897f54f3.png" class="logo__img" alt="logo" style="float:left" width="100px" height="100px">
                <p class="logo__slogan">
                   Cara tercepat dan termudah untuk pembelian kredit permainan.
                </p>
