--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-   <!-- Notification -->
+   <!-- Notificationn -->
    <div class="notification" id="notif">
       <div class="notification__container">
          <i class="fas fa-bell"></i>
