--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    <link rel="stylesheet" href="./vendor/slick/slick-theme.css">
    <link rel="stylesheet" href="css/style.css">
    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-   <title>Mamad Gaming Store</title>
+   <title>Macam Macam Mamad</title>
 </head>
 
 <body>
