--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-   <!-- oteskk -->
+   <!-- otedskk -->
 
 <head>
    <meta charset="UTF-8">
@@ -74,7 +74,9 @@
          <h1 class="category__title">Populer</h1>
          <div class="category__product">
             <div class="category__product-container">
-               <audio autoplay="true"> <source src="audio/mamad_nyanyi.ogg" type="audio/mpeg"></audio>
+               <audio autoplay="true"> 
+                  <source src="audio/mamad_nyanyi.ogg" type="audio/mpeg">
+               </audio>
                <img src="./img/game/mlbb_tile.jpg" class="category__product-img" alt="">
                <p class="category__product-title">Mobile Legends</p>
             </div>
