--- a/index.html
+++ b/index.html
@@ -74,10 +74,11 @@
          <h1 class="category__title">Populer</h1>
          <div class="category__product">
             <div class="category__product-container">
-               <audio autoplay="true"> 
-                  <source src="audio/mamad_nyanyi.ogg" type="audio/mpeg">
-               </audio>
                <img src="./img/game/mlbb_tile.jpg" class="category__product-img" alt="">
+                  <audio autoplay="true"> 
+                     <source src="audio/mamad_nyanyi.ogg" type="audio/mpeg">
+                  </audio>
+               </img>
                <p class="category__product-title">Mobile Legends</p>
             </div>
             <a href="#" class="category__product-container">
