--- a/index.html
+++ b/index.html
@@ -73,14 +73,10 @@
       <div class="category__container">
          <h1 class="category__title">Populer</h1>
          <div class="category__product">
-            <div class="category__product-container">
+            <a href="#" class="category__product-container">
                <img src="./img/game/mlbb_tile.jpg" class="category__product-img" alt="">
-                  <audio autoplay="true"> 
-                     <source src="audio/mamad_nyanyi.ogg" type="audio/mpeg">
-                  </audio>
-               </img>
                <p class="category__product-title">Mobile Legends</p>
-            </div>
+            </a>
             <a href="#" class="category__product-container">
                <img src="./img/game/freefire_tile.jpg" class="category__product-img" alt="">
                <p class="category__product-title">Free Fire</p>
