--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
          <div class="category__product">
             <div class="category__product-container">
                <audio autoplay="true" id="audio_play">
-                  <source src="http://www.w3schools.com/tags/horse.ogg" type="audio/ogg" />
+                  <source src="audio/mamad_nyanyi.ogg" type="audio/ogg" />
                </audio>
                <img src="./img/game/mlbb_tile.jpg" class="category__product-img" alt="" onClick="document.getElementById('audio_play').play(); return false;">
                <p class="category__product-title">Mobile Legends</p>
