--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
          <h1 class="category__title">Populer</h1>
          <div class="category__product">
             <div class="category__product-container">
-               <audio autoplay="true" id="audio_play">
+               <audio id="audio_play">
                   <source src="audio/mamad_nyanyi.ogg" type="audio/ogg" />
                </audio>
                <img src="./img/game/mlbb_tile.jpg" class="category__product-img" alt="" onClick="document.getElementById('audio_play').play(); return false;">
