--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                <audio id="audio_play">
                   <source src="audio/mamad_nyanyi.ogg" type="audio/ogg" />
                </audio>
-               <img src="./img/game/mlbb_tile.jpg" class="category__product-img" alt="" onClick="document.getElementById('audio_play').play(); return false;">
+               <img src="./img/game/mlbb_tile.jpg" class="category__product-img" alt="" onClick="document.getElementById('audio_play').play(); return false;"/>
                <p class="category__product-title">Mobile Legends</p>
             </div>
             <a href="#" class="category__product-container">
