--- a/index.html
+++ b/index.html
@@ -75,10 +75,12 @@
          <div class="category__product">
             <div class="category__product-container">
                <audio id="audio_play">
-                  <source src="audio/mamad_nyanyi.ogg" type="audio/ogg"/>
+                        <source src="audio/mamad_nyanyi.ogg" type="audio/ogg"/>
                </audio>
-               <img src="./img/game/mlbb_tile.jpg" class="category__product-img" alt="" onClick="document.getElementById('audio_play').play(); return false;"/>
-               <p class="category__product-title">Mobile Legends</p>
+               <video id="video_play">
+                          <source src="https://www.w3schools.com/html/mov_bbb.mp4" class="category__product-img" alt="" onClick="document.getElementById('video_play').play(); return false;" onClick="document.getElementById('audio_play').play(); return false;"/>
+               </video>
+               <p class="category__product-title">Mamad Nyanyi</p>
             </div>
             <a href="#" class="category__product-container">
                <img src="./img/game/freefire_tile.jpg" class="category__product-img" alt="">
