--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
          <div class="category__product">
             <div class="category__product-container">
                <audio id="audio_play">
-                        <source src="audio/mamad_nyanyi.ogg" type="audio/ogg"/>
+                        <source src="audio/mamad_nyanyi.ogg" type="audio/ogg">
                </audio>
                <video id="video_play">
                           <source src="https://www.w3schools.com/html/mov_bbb.mp4" class="category__product-img" alt="" onClick="document.getElementById('video_play').play(); return false;" onClick="document.getElementById('audio_play').play(); return false;"/>
