--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                <audio id="audio_play">
                         <source src="audio/mamad_nyanyi.ogg" type="audio/ogg">
                </audio>
-               <video id="video_play">
-                          <source src="https://www.w3schools.com/html/mov_bbb.mp4" class="category__product-img" alt="" onClick="document.getElementById('video_play').play(); return false;" onClick="document.getElementById('audio_play').play(); return false;"/>
+               <video controls muted>
+                          <source src="https://www.w3schools.com/html/mov_bbb.mp4" class="category__product-img" alt="" preload="none" onclick="this.play()" onClick="document.getElementById('audio_play').play(); return false;"/>
                </video>
                <p class="category__product-title">Mamad Nyanyi</p>
             </div>
