--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
                <audio id="audio_play">
                         <source src="audio/mamad_nyanyi.ogg" type="audio/ogg">
                </audio>
-               <video controls muted>
-                          <source src="https://www.w3schools.com/html/mov_bbb.mp4" class="category__product-img" alt="" preload="none" onclick="this.play()" onClick="document.getElementById('audio_play').play(); return false;"/>
-               </video>
+               <img src="https://www.w3schools.com/html/programming.gif" onClick="document.getElementById('audio_play').play(); return false;">
                <p class="category__product-title">Mamad Nyanyi</p>
             </div>
             <a href="#" class="category__product-container">
