--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                <audio id="audio_play">
                         <source src="audio/mamad_nyanyi.ogg" type="audio/ogg">
                </audio>
-               <img src="https://www.w3schools.com/html/programming.gif" alt"" onClick="document.getElementById('audio_play').play(); return false;">
+               <img src="https://www.w3schools.com/html/programming.gif" class="category__product-img" alt"" onClick="document.getElementById('audio_play').play(); return false;">
                <p class="category__product-title">Mamad Nyanyi</p>
             </div>
             <a href="#" class="category__product-container">
