--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="logo">
                <img src="./img/c4f0bad27d8645dbaa7d0b25897f54f3.png" class="logo__img" alt="logo" style="float:left" width="120px">
                <p class="logo__slogan">
-                  Cara tercepat dan termudah untuk pembelian kredit permainan.
+                  Macam Macam Mamad
                </p>
             </div>
             <div class="search">
