--- a/index.html
+++ b/index.html
@@ -75,10 +75,8 @@
          <h1 class="category__title">Populer</h1>
          <div class="category__product">
             <div class="category__product-container">
-               <audio id="audio_play">
-                        <source src="audio/mamad_nyanyi.ogg" type="audio/ogg">
-               </audio>
-               <img src="https://www.w3schools.com/html/programming.gif" class="category__product-img" alt"" onClick="document.getElementById('audio_play').play(); return false;">
+               <img src="https://www.w3schools.com/html/programming.gif" class="category__product-img" alt"" onclick="StartOrStop('audio/mamad_nyanyi.ogg')">
+               <audio id="audio_play"></audio
                <p class="category__product-title">Mamad Nyanyi</p>
             </div>
             <a href="#" class="category__product-container">
