--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
          <div class="category__product">
             <div class="category__product-container">
                <img src="https://www.w3schools.com/html/programming.gif" class="category__product-img" alt"" onclick="StartOrStop('audio/mamad_nyanyi.ogg')">
-               <audio id="audio_play"></audio
+               <audio id="audio_play"></audio>
                <p class="category__product-title">Mamad Nyanyi</p>
             </div>
             <a href="#" class="category__product-container">
