--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
          <h1 class="category__title">Populer</h1>
          <div class="category__product">
             <div class="category__product-container">
-               <img src="https://w3schools.com/html/programming.gif" class="category__product-img" alt"" onclick="StartOrStop('audio/mamad_nyanyi.ogg')">
-               <audio id="audio_play"></audio>
+               <img id="startOrStopImg" src="https://w3schools.com/html/programming.gif" class="category__product-img" alt"">
+               <audio id="audio_play" src="audio/mamad_nyanyi.ogg"></audio>
                <p class="category__product-title">Mamad Nyanyi</p>
             </div>
             <a href="#" class="category__product-container">
