--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <link rel="stylesheet" href="./vendor/slick/slick-theme.css">
    <link rel="stylesheet" href="css/style.css">
    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
-   <title>Macam Macam Mamd</title>
+   <title>Macam Macam</title>
 </head>
 
 <body>
