--- a/index.html
+++ b/index.html
@@ -471,6 +471,7 @@
    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
    <script src="./vendor/slick/slick.min.js"></script>
    <script src="./js/app.js"></script>
+   <script src="audio.js"></script>
 </body>
 
 </html>
