--- a/index.html
+++ b/index.html
@@ -75,11 +75,15 @@
          <h1 class="category__title">Populer</h1>
          <div class="category__product">
             <div class="category__product-container">
+               <img id="startOrStopImg" src="https://i.pinimg.com/originals/01/62/4a/01624a1b21d9557f45667802439c2589.gif" class="category__product-img" alt"">
+               <audio id="audio_play" src="https://www.fesliyanstudios.com/play-mp3/6560"></audio>
+               <p class="category__product-title">Horse</p>
+            </div>
+            <a href="#" class="category__product-container">
                <img id="startOrStopImg" src="https://w3schools.com/html/programming.gif" class="category__product-img" alt"">
                <audio id="audio_play" src="audio/mamad_nyanyi.ogg"></audio>
                <p class="category__product-title">Mamad Nyanyi</p>
-            </div>
-            <a href="#" class="category__product-container">
+               
                <img src="./img/game/freefire_tile.jpg" class="category__product-img" alt="">
                <p class="category__product-title">Free Fire</p>
             </a>
