--- a/index.html
+++ b/index.html
@@ -80,12 +80,8 @@
                <p class="category__product-title">Horse</p>
             </div>
             <a href="#" class="category__product-container">
-               <img id="startOrStopImg" src="https://w3schools.com/html/programming.gif" class="category__product-img" alt"">
-               <audio id="audio_play" src="audio/mamad_nyanyi.ogg"></audio>
-               <p class="category__product-title">Mamad Nyanyi</p>
-               
-               <img src="./img/game/freefire_tile.jpg" class="category__product-img" alt="">
-               <p class="category__product-title">Free Fire</p>
+               <img src="./img/game/PUBG_RPS11_tile.jpg" class="category__product-img" alt="">
+               <p class="category__product-title">PUBG Mobile</p>
             </a>
             <a href="#" class="category__product-container">
                <img src="./img/game/PUBG_RPS11_tile.jpg" class="category__product-img" alt="">
