--- a/index.html
+++ b/index.html
@@ -79,10 +79,11 @@
                <audio id="audio_play" src="https://www.fesliyanstudios.com/play-mp3/6560"></audio>
                <p class="category__product-title">Horse</p>
             </div>
+            <div class="category__product">
                <img id="startOrStopImg2" src="https://media2.giphy.com/media/T9MvecMeiLgTXQ4s3h/200.gif" class="category__product-img" alt"">
                <audio id="audio_play2" src="https://www.mediamusicnow.co.uk/royalty-free-sound-effects/animals/goat-sounds/goat---baby-goat-bleat-01.aspx"></audio>
                <p class="category__product-title">Goat</p>
-            </a>
+            </div>
             <a href="#" class="category__product-container">
                <img src="./img/game/PUBG_RPS11_tile.jpg" class="category__product-img" alt="">
                <p class="category__product-title">PUBG Mobile</p>
